@@ -1,10 +1,9 @@
 // Copyright 2018 Yahoo Holdings. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
-
 package com.yahoo.vespa.hosted.node.admin.provider;
 
 import org.junit.Test;
 
-import java.util.Collections;
+import java.util.Map;
 
 import static org.junit.Assert.assertEquals;
 
@@ -14,7 +13,7 @@ public class DebugHandlerHelperTest {
         DebugHandlerHelper helper = new DebugHandlerHelper();
         helper.addConstant("constant-key", "constant-value");
 
-        NodeAdminDebugHandler handler = () -> Collections.singletonMap("handler-value-key", "handler-value-value");
+        NodeAdminDebugHandler handler = () -> Map.of("handler-value-key", "handler-value-value");
         helper.addHandler("handler-key", handler);
 
         helper.addThreadSafeSupplier("supplier-key", () -> "supplier-value");
